@@ -20,6 +20,15 @@ name|java
 operator|.
 name|io
 operator|.
+name|Closeable
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -263,21 +272,6 @@ operator|.
 name|SolrException
 operator|.
 name|ErrorCode
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|cloud
-operator|.
-name|ClosableThread
 import|;
 end_import
 begin_import
@@ -651,8 +645,28 @@ name|RecoveryStrategy
 extends|extends
 name|Thread
 implements|implements
-name|ClosableThread
+name|Closeable
 block|{
+DECL|field|LOG
+specifier|private
+specifier|static
+specifier|final
+name|Logger
+name|LOG
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|MethodHandles
+operator|.
+name|lookup
+argument_list|()
+operator|.
+name|lookupClass
+argument_list|()
+argument_list|)
+decl_stmt|;
 DECL|field|WAIT_FOR_UPDATES_WITH_STALE_STATE_PAUSE
 specifier|private
 specifier|static
@@ -695,26 +709,6 @@ name|String
 name|REPLICATION_HANDLER
 init|=
 literal|"/replication"
-decl_stmt|;
-DECL|field|log
-specifier|private
-specifier|static
-specifier|final
-name|Logger
-name|log
-init|=
-name|LoggerFactory
-operator|.
-name|getLogger
-argument_list|(
-name|MethodHandles
-operator|.
-name|lookup
-argument_list|()
-operator|.
-name|lookupClass
-argument_list|()
-argument_list|)
 decl_stmt|;
 DECL|interface|RecoveryListener
 specifier|public
@@ -901,7 +895,12 @@ name|close
 operator|=
 literal|true
 expr_stmt|;
-try|try
+if|if
+condition|(
+name|prevSendPreRecoveryHttpUriRequest
+operator|!=
+literal|null
+condition|)
 block|{
 name|prevSendPreRecoveryHttpUriRequest
 operator|.
@@ -909,19 +908,11 @@ name|abort
 argument_list|()
 expr_stmt|;
 block|}
-catch|catch
-parameter_list|(
-name|NullPointerException
-name|e
-parameter_list|)
-block|{
-comment|// okay
-block|}
-name|log
+name|LOG
 operator|.
 name|warn
 argument_list|(
-literal|"Stopping recovery for core={} coreNodeName={}"
+literal|"Stopping recovery for core=[{}] coreNodeName=[{}]"
 argument_list|,
 name|coreName
 argument_list|,
@@ -963,7 +954,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"Recovery failed - I give up."
 argument_list|)
@@ -1032,15 +1023,13 @@ operator|.
 name|getCoreUrl
 argument_list|()
 decl_stmt|;
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"Attempting to replicate from "
-operator|+
+literal|"Attempting to replicate from [{}]."
+argument_list|,
 name|leaderUrl
-operator|+
-literal|"."
 argument_list|)
 expr_stmt|;
 comment|// send commit
@@ -1149,7 +1138,7 @@ block|}
 comment|// solrcloud_debug
 if|if
 condition|(
-name|log
+name|LOG
 operator|.
 name|isDebugEnabled
 argument_list|()
@@ -1202,7 +1191,7 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
-name|log
+name|LOG
 operator|.
 name|debug
 argument_list|(
@@ -1324,7 +1313,7 @@ name|Exception
 name|e
 parameter_list|)
 block|{
-name|log
+name|LOG
 operator|.
 name|debug
 argument_list|(
@@ -1467,7 +1456,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"SolrCore not found - cannot recover:"
 operator|+
@@ -1483,7 +1472,7 @@ argument_list|(
 name|core
 argument_list|)
 expr_stmt|;
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -1518,7 +1507,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|""
 argument_list|,
@@ -1547,7 +1536,7 @@ name|Exception
 name|e
 parameter_list|)
 block|{
-name|log
+name|LOG
 operator|.
 name|error
 argument_list|(
@@ -1630,7 +1619,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"No UpdateLog found - cannot recover."
 argument_list|)
@@ -1700,7 +1689,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"Corrupt tlog - ignoring."
 argument_list|,
@@ -1744,8 +1733,7 @@ name|oldIdx
 init|=
 literal|0
 decl_stmt|;
-comment|// index of the start of the old list in the current
-comment|// list
+comment|// index of the start of the old list in the current list
 name|long
 name|firstStartingVersion
 init|=
@@ -1799,31 +1787,31 @@ operator|>
 literal|0
 condition|)
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"####### Found new versions added after startup: num="
-operator|+
+literal|"####### Found new versions added after startup: num=[{}]"
+argument_list|,
 name|oldIdx
 argument_list|)
 expr_stmt|;
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"###### currentVersions="
-operator|+
+literal|"###### currentVersions=[{}]"
+argument_list|,
 name|recentVersions
 argument_list|)
 expr_stmt|;
 block|}
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"###### startupVersions="
-operator|+
+literal|"###### startupVersions=[{}]"
+argument_list|,
 name|startingVersions
 argument_list|)
 expr_stmt|;
@@ -1838,7 +1826,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"Error getting recent versions."
 argument_list|,
@@ -1889,7 +1877,7 @@ comment|// last operation at the time of startup had the GAP flag set...
 comment|// this means we were previously doing a full index replication
 comment|// that probably didn't complete and buffering updates in the
 comment|// meantime.
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -1913,7 +1901,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"Error trying to get ulog starting operation."
 argument_list|,
@@ -2073,14 +2061,14 @@ argument_list|()
 condition|)
 block|{
 comment|// we are now the leader - no one else must have been suitable
-name|log
+name|LOG
 operator|.
 name|warn
 argument_list|(
 literal|"We have not yet recovered - but we are now the leader!"
 argument_list|)
 expr_stmt|;
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2105,12 +2093,12 @@ argument_list|)
 expr_stmt|;
 return|return;
 block|}
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"Begin buffering updates. core="
-operator|+
+literal|"Begin buffering updates. core=[{}]"
+argument_list|,
 name|coreName
 argument_list|)
 expr_stmt|;
@@ -2123,23 +2111,19 @@ name|replayed
 operator|=
 literal|false
 expr_stmt|;
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"Publishing state of core "
-operator|+
+literal|"Publishing state of core [{}] as recovering, leader is [{}] and I am [{}]"
+argument_list|,
 name|core
 operator|.
 name|getName
 argument_list|()
-operator|+
-literal|" as recovering, leader is "
-operator|+
+argument_list|,
 name|leaderUrl
-operator|+
-literal|" and I am "
-operator|+
+argument_list|,
 name|ourUrl
 argument_list|)
 expr_stmt|;
@@ -2203,7 +2187,7 @@ name|isClosed
 argument_list|()
 condition|)
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2227,7 +2211,7 @@ name|isClosed
 argument_list|()
 condition|)
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2276,16 +2260,14 @@ operator|=
 literal|false
 expr_stmt|;
 comment|// only try sync the first time through the loop
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"Attempting to PeerSync from "
-operator|+
+literal|"Attempting to PeerSync from [{}] - recoveringAfterStartup=[{}]"
+argument_list|,
 name|leaderUrl
-operator|+
-literal|" - recoveringAfterStartup="
-operator|+
+argument_list|,
 name|recoveringAfterStartup
 argument_list|)
 expr_stmt|;
@@ -2366,7 +2348,7 @@ literal|false
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2374,101 +2356,14 @@ literal|"PeerSync stage of recovery was successful."
 argument_list|)
 expr_stmt|;
 comment|// solrcloud_debug
-if|if
-condition|(
-name|log
-operator|.
-name|isDebugEnabled
-argument_list|()
-condition|)
-block|{
-try|try
-block|{
-name|RefCounted
-argument_list|<
-name|SolrIndexSearcher
-argument_list|>
-name|searchHolder
-init|=
-name|core
-operator|.
-name|getNewestSearcher
-argument_list|(
-literal|false
-argument_list|)
-decl_stmt|;
-name|SolrIndexSearcher
-name|searcher
-init|=
-name|searchHolder
-operator|.
-name|get
-argument_list|()
-decl_stmt|;
-try|try
-block|{
-name|log
-operator|.
-name|debug
+name|cloudDebugLog
 argument_list|(
 name|core
-operator|.
-name|getCoreDescriptor
-argument_list|()
-operator|.
-name|getCoreContainer
-argument_list|()
-operator|.
-name|getZkController
-argument_list|()
-operator|.
-name|getNodeName
-argument_list|()
-operator|+
-literal|" synched "
-operator|+
-name|searcher
-operator|.
-name|search
-argument_list|(
-operator|new
-name|MatchAllDocsQuery
-argument_list|()
 argument_list|,
-literal|1
-argument_list|)
-operator|.
-name|totalHits
+literal|"synced"
 argument_list|)
 expr_stmt|;
-block|}
-finally|finally
-block|{
-name|searchHolder
-operator|.
-name|decref
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|log
-operator|.
-name|debug
-argument_list|(
-literal|"Error in solrcloud_debug block"
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2491,7 +2386,7 @@ literal|true
 expr_stmt|;
 return|return;
 block|}
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2505,7 +2400,7 @@ name|isClosed
 argument_list|()
 condition|)
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2514,7 +2409,7 @@ argument_list|)
 expr_stmt|;
 break|break;
 block|}
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2541,7 +2436,7 @@ name|isClosed
 argument_list|()
 condition|)
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2567,7 +2462,7 @@ name|isClosed
 argument_list|()
 condition|)
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2576,7 +2471,7 @@ argument_list|)
 expr_stmt|;
 break|break;
 block|}
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2602,7 +2497,7 @@ operator|.
 name|interrupt
 argument_list|()
 expr_stmt|;
-name|log
+name|LOG
 operator|.
 name|warn
 argument_list|(
@@ -2626,7 +2521,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"Error while trying to recover"
 argument_list|,
@@ -2645,7 +2540,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"Error while trying to recover. core="
 operator|+
@@ -2667,7 +2562,7 @@ comment|// dropBufferedUpdate()s currently only supports returning to ACTIVE sta
 comment|// being added w/o UpdateLog.FLAG_GAP, hence losing the info on restart that we are not up-to-date.
 comment|// For now, ulog will simply remain in BUFFERING state, and an additional call to bufferUpdates() will
 comment|// reset our starting point for playback.
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2681,7 +2576,7 @@ condition|(
 name|successfulRecovery
 condition|)
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2713,7 +2608,7 @@ name|Exception
 name|e
 parameter_list|)
 block|{
-name|log
+name|LOG
 operator|.
 name|error
 argument_list|(
@@ -2761,7 +2656,7 @@ name|isClosed
 argument_list|()
 condition|)
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2770,7 +2665,7 @@ argument_list|)
 expr_stmt|;
 break|break;
 block|}
-name|log
+name|LOG
 operator|.
 name|error
 argument_list|(
@@ -2795,7 +2690,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"Recovery failed - max retries exceeded ("
 operator|+
@@ -2833,7 +2728,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"Could not publish that recovery failed"
 argument_list|,
@@ -2854,9 +2749,9 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
-literal|""
+literal|"An error has occurred during recovery"
 argument_list|,
 name|e
 argument_list|)
@@ -2864,10 +2759,17 @@ expr_stmt|;
 block|}
 try|try
 block|{
-comment|// start at 1 sec and work up to a min
+comment|// Wait an exponential interval between retries, start at 5 seconds and work up to a minute.
+comment|// If we're at attempt>= 4, there's no point computing pow(2, retries) because the result
+comment|// will always be the minimum of the two (12). Since we sleep at 5 seconds sub-intervals in
+comment|// order to check if we were closed, 12 is chosen as the maximum loopCount (5s * 12 = 1m).
 name|double
 name|loopCount
 init|=
+name|retries
+operator|<
+literal|4
+condition|?
 name|Math
 operator|.
 name|min
@@ -2881,14 +2783,16 @@ argument_list|,
 name|retries
 argument_list|)
 argument_list|,
-literal|60
+literal|12
 argument_list|)
+else|:
+literal|12
 decl_stmt|;
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"Wait {} seconds before trying to recover again ({})"
+literal|"Wait [{}] seconds before trying to recover again (attempt={})"
 argument_list|,
 name|loopCount
 argument_list|,
@@ -2916,7 +2820,7 @@ name|isClosed
 argument_list|()
 condition|)
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2949,7 +2853,7 @@ operator|.
 name|interrupt
 argument_list|()
 expr_stmt|;
-name|log
+name|LOG
 operator|.
 name|warn
 argument_list|(
@@ -2976,7 +2880,7 @@ operator|==
 literal|null
 condition|)
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -2989,11 +2893,11 @@ name|seedVersionBuckets
 argument_list|()
 expr_stmt|;
 block|}
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"Finished recovery process, successful="
+literal|"Finished recovery process, successful=[{}]"
 argument_list|,
 name|Boolean
 operator|.
@@ -3045,7 +2949,7 @@ literal|null
 condition|)
 block|{
 comment|// no replay needed\
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -3055,7 +2959,7 @@ expr_stmt|;
 block|}
 else|else
 block|{
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
@@ -3082,7 +2986,7 @@ name|SolrException
 operator|.
 name|log
 argument_list|(
-name|log
+name|LOG
 argument_list|,
 literal|"Replay failed"
 argument_list|)
@@ -3101,14 +3005,40 @@ throw|;
 block|}
 block|}
 comment|// solrcloud_debug
+name|cloudDebugLog
+argument_list|(
+name|core
+argument_list|,
+literal|"replayed"
+argument_list|)
+expr_stmt|;
+return|return
+name|future
+return|;
+block|}
+DECL|method|cloudDebugLog
+specifier|private
+name|void
+name|cloudDebugLog
+parameter_list|(
+name|SolrCore
+name|core
+parameter_list|,
+name|String
+name|op
+parameter_list|)
+block|{
 if|if
 condition|(
-name|log
+operator|!
+name|LOG
 operator|.
 name|isDebugEnabled
 argument_list|()
 condition|)
 block|{
+return|return;
+block|}
 try|try
 block|{
 name|RefCounted
@@ -3134,10 +3064,27 @@ argument_list|()
 decl_stmt|;
 try|try
 block|{
-name|log
+specifier|final
+name|int
+name|totalHits
+init|=
+name|searcher
 operator|.
-name|debug
+name|search
 argument_list|(
+operator|new
+name|MatchAllDocsQuery
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|totalHits
+decl_stmt|;
+specifier|final
+name|String
+name|nodeName
+init|=
 name|core
 operator|.
 name|getCoreDescriptor
@@ -3151,20 +3098,17 @@ argument_list|()
 operator|.
 name|getNodeName
 argument_list|()
-operator|+
-literal|" replayed "
-operator|+
-name|searcher
+decl_stmt|;
+name|LOG
 operator|.
-name|search
+name|debug
 argument_list|(
-operator|new
-name|MatchAllDocsQuery
-argument_list|()
+literal|"[{}] {} [{} total hits]"
 argument_list|,
-literal|1
-argument_list|)
-operator|.
+name|nodeName
+argument_list|,
+name|op
+argument_list|,
 name|totalHits
 argument_list|)
 expr_stmt|;
@@ -3184,7 +3128,7 @@ name|Exception
 name|e
 parameter_list|)
 block|{
-name|log
+name|LOG
 operator|.
 name|debug
 argument_list|(
@@ -3195,12 +3139,6 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-return|return
-name|future
-return|;
-block|}
-annotation|@
-name|Override
 DECL|method|isClosed
 specifier|public
 name|boolean
@@ -3363,11 +3301,11 @@ name|mrr
 operator|.
 name|httpUriRequest
 expr_stmt|;
-name|log
+name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"Sending prep recovery command to {}; {}"
+literal|"Sending prep recovery command to [{}]; [{}]"
 argument_list|,
 name|leaderBaseUrl
 argument_list|,
